RESOLVED FIXED158229
[iOS] Better deal with WebProcess suspension due to screen locking
https://bugs.webkit.org/show_bug.cgi?id=158229
Summary [iOS] Better deal with WebProcess suspension due to screen locking
Chris Dumez
Reported 2016-05-31 11:58:37 PDT
Better deal with WebProcess suspension due to screen locking, especially when it comes to marking layers as volatile.
Attachments
Patch (8.19 KB, patch)
2016-05-31 12:23 PDT, Chris Dumez
no flags
Patch (8.18 KB, patch)
2016-05-31 12:32 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-05-31 11:59:12 PDT
Chris Dumez
Comment 2 2016-05-31 12:23:04 PDT
WebKit Commit Bot
Comment 3 2016-05-31 12:25:13 PDT
Attachment 280166 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebPage/WebPage.cpp:2067: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/WebProcess/WebPage/WebPage.h:585: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/WebProcess/WebPage/WebPage.h:1430: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4 2016-05-31 12:30:39 PDT
Comment on attachment 280166 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280166&action=review > Source/WebKit2/ChangeLog:20 > + them as purgeable for 3 seconds for a reason or another, it is not use in "there is no use in retrying"
Chris Dumez
Comment 5 2016-05-31 12:32:28 PDT
Chris Dumez
Comment 6 2016-05-31 12:33:49 PDT
Comment on attachment 280168 [details] Patch Clearing flags on attachment: 280168 Committed r201519: <http://trac.webkit.org/changeset/201519>
Chris Dumez
Comment 7 2016-05-31 12:33:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.